--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -130,6 +130,20 @@ Values for `defaultOrder`:
 * `NATURAL`: sorts strings containing a mix of letters and numbers. Given strings of mixed characters and numbers, it sorts the numbers in value order, while sorting the non-numbers in ASCII order.
 * `NATURAL_REVERSED`: sorts strings containing a mix of letters and numbers in the reversed order of `NATURAL`.   
 
+== Download
+
+The library is hosted on maven central.
+
+[source, xml, subs="verbatim,attributes"]
+.Maven coordinates of the library
+----
+<dependency>
+  <groupId>fr.jmini.utils</groupId>
+  <artifactId>path-order</artifactId>
+  <version>{last-stable-version}</version>
+</dependency>
+----
+
 == Source Code
 
 As for any java project, the source code of the plugin is available in the git-link:src/[src/] folder.
@@ -162,7 +176,7 @@ The output of this command is an HTML page located at `<git repo root>/build/doc
 
 `signing.gnupg.keyName` and `signing.gnupg.passphrase` are expected to be set in your local `gradle.properties` file to be able to sign.
 `sonatypeUser` and `sonatypePassword` are expected to be set in order to be able to publish to a distant repository.
-					
+
 Command to build and publish the result to maven central:
 
 ----
